--- a/bubbles.html
+++ b/bubbles.html
@@ -185,164 +185,132 @@
                     <div id="cardbody">
                         <div class="wrapper">
                             <ul class="cards">
-                                <li class="flipcard">
+                                <li class="card-game">
                                     <div class="view front-view">
-                                        <span class="material-symbols-outlined">
-                                            question_mark
-                                        </span>
+                                        <span class="material-symbols-outlined">question_mark</span>
                                     </div>
                                     <div class="view back-view">
-                                        <img src="assets/images/game-icons/clownfish_3034378.svg" alt="card-img">
+                                        <img src="assets/images/game-icons/clownfish_1137916.png" alt="card-img">
                                     </div>
                                 </li>
-                                <li class="flipcard">
+                                <li class="card-game">
                                     <div class="view front-view">
-                                        <span class="material-symbols-outlined">
-                                            question_mark
-                                        </span>
+                                        <span class="material-symbols-outlined">question_mark</span>
                                     </div>
                                     <div class="view back-view">
-                                        <img src="assets/images/game-icons/eel_7716895.svg" alt="card-img">
+                                        <img src="assets/images/game-icons/crab_9420362.png" alt="card-img">
                                     </div>
                                 </li>
-                                <li class="flipcard">
+                                <li class="card-game">
                                     <div class="view front-view">
-                                        <span class="material-symbols-outlined">
-                                            question_mark
-                                        </span>
+                                        <span class="material-symbols-outlined">question_mark</span>
                                     </div>
                                     <div class="view back-view">
-                                        <img src="assets/images/game-icons/puffer-fish_8047947.svg" alt="card-img">
+                                        <img src="assets/images/game-icons/eel_1945468.png" alt="card-img">
                                     </div>
                                 </li>
-                                <li class="flipcard">
+                                <li class="card-game">
                                     <div class="view front-view">
-                                        <span class="material-symbols-outlined">
-                                            question_mark
-                                        </span>
+                                        <span class="material-symbols-outlined">question_mark</span>
                                     </div>
                                     <div class="view back-view">
-                                        <img src="assets/images/game-icons/star_560845.svg" alt="card-img">
+                                        <img src="assets/images/game-icons/pufferfish_12336156.png" alt="card-img">
                                     </div>
                                 </li>
-                                <li class="flipcard">
+                                <li class="card-game">
                                     <div class="view front-view">
-                                        <span class="material-symbols-outlined">
-                                            question_mark
-                                        </span>
+                                        <span class="material-symbols-outlined">question_mark</span>
                                     </div>
                                     <div class="view back-view">
-                                        <img src="assets/images/game-icons/clownfish_3034378.svg" alt="card-img">
+                                        <img src="assets/images/game-icons/sailboat_2146720.png" alt="card-img">
                                     </div>
                                 </li>
-                                <li class="flipcard">
+                                <li class="card-game">
                                     <div class="view front-view">
-                                        <span class="material-symbols-outlined">
-                                            question_mark
-                                        </span>
+                                        <span class="material-symbols-outlined">question_mark</span>
                                     </div>
                                     <div class="view back-view">
-                                        <img src="assets/images/game-icons/turtle_3061226.svg" alt="card-img">
+                                        <img src="assets/images/game-icons/star_1868316.png" alt="card-img">
                                     </div>
                                 </li>
-                                <li class="flipcard">
+                                <li class="card-game">
                                     <div class="view front-view">
-                                        <span class="material-symbols-outlined">
-                                            question_mark
-                                        </span>
+                                        <span class="material-symbols-outlined">question_mark</span>
                                     </div>
                                     <div class="view back-view">
-                                        <img src="assets/images/game-icons/star_560845.svg" alt="card-img">
+                                        <img src="assets/images/game-icons/whale_7219380.png" alt="card-img">
                                     </div>
                                 </li>
-                                <li class="flipcard">
+                                <li class="card-game">
                                     <div class="view front-view">
-                                        <span class="material-symbols-outlined">
-                                            question_mark
-                                        </span>
+                                        <span class="material-symbols-outlined">question_mark</span>
                                     </div>
                                     <div class="view back-view">
-                                        <img src="assets/images/game-icons/eel_7716895.svg" alt="card-img">
+                                        <img src="assets/images/game-icons/wink_8466367.png" alt="card-img">
                                     </div>
                                 </li>
-                                <li class="flipcard">
+                                <li class="card-game">
                                     <div class="view front-view">
-                                        <span class="material-symbols-outlined">
-                                            question_mark
-                                        </span>
+                                        <span class="material-symbols-outlined">question_mark</span>
                                     </div>
                                     <div class="view back-view">
-                                        <img src="assets/images/game-icons/puffer-fish_8047947.svg" alt="card-img">
+                                        <img src="assets/images/game-icons/clownfish_1137916.png" alt="card-img">
                                     </div>
                                 </li>
-                                <li class="flipcard">
+                                <li class="card-game">
                                     <div class="view front-view">
-                                        <span class="material-symbols-outlined">
-                                            question_mark
-                                        </span>
+                                        <span class="material-symbols-outlined">question_mark</span>
                                     </div>
                                     <div class="view back-view">
-                                        <img src="assets/images/game-icons/wink_8466367.svg" alt="card-img">
+                                        <img src="assets/images/game-icons/wink_8466367.png" alt="card-img">
                                     </div>
                                 </li>
-                                <li class="flipcard">
+                                <li class="card-game">
                                     <div class="view front-view">
-                                        <span class="material-symbols-outlined">
-                                            question_mark
-                                        </span>
+                                        <span class="material-symbols-outlined">question_mark</span>
                                     </div>
                                     <div class="view back-view">
-                                        <img src="assets/images/game-icons/turtle_3061226.svg" alt="card-img">
+                                        <img src="assets/images/game-icons/whale_7219380.png" alt="card-img">
                                     </div>
                                 </li>
-                                <li class="flipcard">
+                                <li class="card-game">
                                     <div class="view front-view">
-                                        <span class="material-symbols-outlined">
-                                            question_mark
-                                        </span>
+                                        <span class="material-symbols-outlined">question_mark</span>
                                     </div>
                                     <div class="view back-view">
-                                        <img src="assets/images/game-icons/wink_8466367.svg" alt="card-img">
+                                        <img src="assets/images/game-icons/sailboat_2146720.png" alt="card-img">
                                     </div>
                                 </li>
-                                <li class="flipcard">
+                                <li class="card-game">
                                     <div class="view front-view">
-                                        <span class="material-symbols-outlined">
-                                            question_mark
-                                        </span>
+                                        <span class="material-symbols-outlined">question_mark</span>
                                     </div>
                                     <div class="view back-view">
-                                        <img src="assets/images/game-icons/ocean_4932799.svg" alt="card-img">
+                                        <img src="assets/images/game-icons/star_1868316.png" alt="card-img">
                                     </div>
                                 </li>
-                                <li class="flipcard">
+                                <li class="card-game">
                                     <div class="view front-view">
-                                        <span class="material-symbols-outlined">
-                                            question_mark
-                                        </span>
+                                        <span class="material-symbols-outlined">question_mark</span>
                                     </div>
                                     <div class="view back-view">
-                                        <img src="assets/images/game-icons/beach-sunset_2350961.svg" alt="card-img">
+                                        <img src="assets/images/game-icons/pufferfish_12336156.png" alt="card-img">
                                     </div>
                                 </li>
-                                <li class="flipcard">
+                                <li class="card-game">
                                     <div class="view front-view">
-                                        <span class="material-symbols-outlined">
-                                            question_mark
-                                        </span>
+                                        <span class="material-symbols-outlined">question_mark</span>
                                     </div>
                                     <div class="view back-view">
-                                        <img src="assets/images/game-icons/beach-sunset_2350961.svg" alt="card-img">
+                                        <img src="assets/images/game-icons/eel_1945468.png" alt="card-img">
                                     </div>
                                 </li>
-                                <li class="flipcard">
+                                <li class="card-game">
                                     <div class="view front-view">
-                                        <span class="material-symbols-outlined">
-                                            question_mark
-                                        </span>
+                                        <span class="material-symbols-outlined">question_mark</span>
                                     </div>
                                     <div class="view back-view">
-                                        <img src="assets/images/game-icons/ocean_4932799.svg" alt="card-img">
+                                        <img src="assets/images/game-icons/crab_9420362.png" alt="card-img">
                                     </div>
                                 </li>
                             </ul>
