create quiz in bubbles page

--- a/bubbles.html
+++ b/bubbles.html
@@ -120,6 +120,23 @@
 
                             </p>
                         </div>
+                        <!-- quiz for bubbles -->
+                        <div class="col-sm-12 col-md-8, col-lg-6 align-self-center">
+                            <div class="quiz-section" id="quiz3">
+                                <h2>Quiz: Trust with the Fox</h2>
+                                <p>Why did Lola decide to help the fox?</p>
+                                <label><input type="radio" name="quiz3" value="1"> Because the fox begged her to
+                                    help.</label>
+                                <label><input type="radio" name="quiz3" value="2"> Because she trusted her instincts and saw
+                                    that
+                                    the fox was helpless.</label>
+                                <label><input type="radio" name="quiz3" value="3"> Because the fox promised her a
+                                    reward.</label>
+                                <button onclick="checkAnswer('quiz3', 2)">Submit</button>
+                                <p class="result" id="result3"></p>
+                            </div>
+                        </div>
+                    
                     </div>
                 </div>
 
@@ -182,140 +199,148 @@
                             </p>
                         </div>
                     </div>
-                    <div id="cardbody">
-                        <div class="wrapper">
-                            <ul class="cards">
-                                <li class="card-game">
-                                    <div class="view front-view">
-                                        <span class="material-symbols-outlined">question_mark</span>
-                                    </div>
-                                    <div class="view back-view">
-                                        <img src="assets/images/game-icons/img-1.png" alt="card-img">
-                                    </div>
-                                </li>
-                                <li class="card-game">
-                                    <div class="view front-view">
-                                        <span class="material-symbols-outlined">question_mark</span>
-                                    </div>
-                                    <div class="view back-view">
-                                        <img src="assets/images/game-icons/img-2.png" alt="card-img">
-                                    </div>
-                                </li>
-                                <li class="card-game">
-                                    <div class="view front-view">
-                                        <span class="material-symbols-outlined">question_mark</span>
-                                    </div>
-                                    <div class="view back-view">
-                                        <img src="assets/images/game-icons/img-3.png" alt="card-img">
-                                    </div>
-                                </li>
-                                <li class="card-game">
-                                    <div class="view front-view">
-                                        <span class="material-symbols-outlined">question_mark</span>
-                                    </div>
-                                    <div class="view back-view">
-                                        <img src="assets/images/game-icons/img-4.png" alt="card-img">
-                                    </div>
-                                </li>
-                                <li class="card-game">
-                                    <div class="view front-view">
-                                        <span class="material-symbols-outlined">question_mark</span>
-                                    </div>
-                                    <div class="view back-view">
-                                        <img src="assets/images/game-icons/img-5.png" alt="card-img">
-                                    </div>
-                                </li>
-                                <li class="card-game">
-                                    <div class="view front-view">
-                                        <span class="material-symbols-outlined">question_mark</span>
-                                    </div>
-                                    <div class="view back-view">
-                                        <img src="assets/images/game-icons/img-6.png" alt="card-img">
-                                    </div>
-                                </li>
-                                <li class="card-game">
-                                    <div class="view front-view">
-                                        <span class="material-symbols-outlined">question_mark</span>
-                                    </div>
-                                    <div class="view back-view">
-                                        <img src="assets/images/game-icons/img-7.png" alt="card-img">
-                                    </div>
-                                </li>
-                                <li class="card-game">
-                                    <div class="view front-view">
-                                        <span class="material-symbols-outlined">question_mark</span>
-                                    </div>
-                                    <div class="view back-view">
-                                        <img src="assets/images/game-icons/img-8.png" alt="card-img">
-                                    </div>
-                                </li>
-                                <li class="card-game">
-                                    <div class="view front-view">
-                                        <span class="material-symbols-outlined">question_mark</span>
-                                    </div>
-                                    <div class="view back-view">
-                                        <img src="assets/images/game-icons/img-1.png" alt="card-img">
-                                    </div>
-                                </li>
-                                <li class="card-game">
-                                    <div class="view front-view">
-                                        <span class="material-symbols-outlined">question_mark</span>
-                                    </div>
-                                    <div class="view back-view">
-                                        <img src="assets/images/game-icons/img-8.png" alt="card-img">
-                                    </div>
-                                </li>
-                                <li class="card-game">
-                                    <div class="view front-view">
-                                        <span class="material-symbols-outlined">question_mark</span>
-                                    </div>
-                                    <div class="view back-view">
-                                        <img src="assets/images/game-icons/img-7.png" alt="card-img">
-                                    </div>
-                                </li>
-                                <li class="card-game">
-                                    <div class="view front-view">
-                                        <span class="material-symbols-outlined">question_mark</span>
-                                    </div>
-                                    <div class="view back-view">
-                                        <img src="assets/images/game-icons/img-5.png" alt="card-img">
-                                    </div>
-                                </li>
-                                <li class="card-game">
-                                    <div class="view front-view">
-                                        <span class="material-symbols-outlined">question_mark</span>
-                                    </div>
-                                    <div class="view back-view">
-                                        <img src="assets/images/game-icons/img-6.png" alt="card-img">
-                                    </div>
-                                </li>
-                                <li class="card-game">
-                                    <div class="view front-view">
-                                        <span class="material-symbols-outlined">question_mark</span>
-                                    </div>
-                                    <div class="view back-view">
-                                        <img src="assets/images/game-icons/img-4.png" alt="card-img">
-                                    </div>
-                                </li>
-                                <li class="card-game">
-                                    <div class="view front-view">
-                                        <span class="material-symbols-outlined">question_mark</span>
-                                    </div>
-                                    <div class="view back-view">
-                                        <img src="assets/images/game-icons/img-3.png" alt="card-img">
-                                    </div>
-                                </li>
-                                <li class="card-game">
-                                    <div class="view front-view">
-                                        <span class="material-symbols-outlined">question_mark</span>
-                                    </div>
-                                    <div class="view back-view">
-                                        <img src="assets/images/game-icons/img-2.png" alt="card-img">
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+            </section>
+
+            <!-- flip game -->
+            <div id="cardbody">
+                <div class="wrapper">
+                    <h4 style="text-align: center;">Match the cards</h4>
+                    <ul class="cards">
+                        <li class="card-game">
+                            <div class="view front-view">
+                                <span class="material-symbols-outlined">question_mark</span>
+                            </div>
+                            <div class="view back-view">
+                                <img src="assets/images/game-icons/img-1.png" alt="card-img">
+                            </div>
+                        </li>
+                        <li class="card-game">
+                            <div class="view front-view">
+                                <span class="material-symbols-outlined">question_mark</span>
+                            </div>
+                            <div class="view back-view">
+                                <img src="assets/images/game-icons/img-2.png" alt="card-img">
+                            </div>
+                        </li>
+                        <li class="card-game">
+                            <div class="view front-view">
+                                <span class="material-symbols-outlined">question_mark</span>
+                            </div>
+                            <div class="view back-view">
+                                <img src="assets/images/game-icons/img-3.png" alt="card-img">
+                            </div>
+                        </li>
+                        <li class="card-game">
+                            <div class="view front-view">
+                                <span class="material-symbols-outlined">question_mark</span>
+                            </div>
+                            <div class="view back-view">
+                                <img src="assets/images/game-icons/img-4.png" alt="card-img">
+                            </div>
+                        </li>
+                        <li class="card-game">
+                            <div class="view front-view">
+                                <span class="material-symbols-outlined">question_mark</span>
+                            </div>
+                            <div class="view back-view">
+                                <img src="assets/images/game-icons/img-5.png" alt="card-img">
+                            </div>
+                        </li>
+                        <li class="card-game">
+                            <div class="view front-view">
+                                <span class="material-symbols-outlined">question_mark</span>
+                            </div>
+                            <div class="view back-view">
+                                <img src="assets/images/game-icons/img-6.png" alt="card-img">
+                            </div>
+                        </li>
+                        <li class="card-game">
+                            <div class="view front-view">
+                                <span class="material-symbols-outlined">question_mark</span>
+                            </div>
+                            <div class="view back-view">
+                                <img src="assets/images/game-icons/img-7.png" alt="card-img">
+                            </div>
+                        </li>
+                        <li class="card-game">
+                            <div class="view front-view">
+                                <span class="material-symbols-outlined">question_mark</span>
+                            </div>
+                            <div class="view back-view">
+                                <img src="assets/images/game-icons/img-8.png" alt="card-img">
+                            </div>
+                        </li>
+                        <li class="card-game">
+                            <div class="view front-view">
+                                <span class="material-symbols-outlined">question_mark</span>
+                            </div>
+                            <div class="view back-view">
+                                <img src="assets/images/game-icons/img-1.png" alt="card-img">
+                            </div>
+                        </li>
+                        <li class="card-game">
+                            <div class="view front-view">
+                                <span class="material-symbols-outlined">question_mark</span>
+                            </div>
+                            <div class="view back-view">
+                                <img src="assets/images/game-icons/img-8.png" alt="card-img">
+                            </div>
+                        </li>
+                        <li class="card-game">
+                            <div class="view front-view">
+                                <span class="material-symbols-outlined">question_mark</span>
+                            </div>
+                            <div class="view back-view">
+                                <img src="assets/images/game-icons/img-7.png" alt="card-img">
+                            </div>
+                        </li>
+                        <li class="card-game">
+                            <div class="view front-view">
+                                <span class="material-symbols-outlined">question_mark</span>
+                            </div>
+                            <div class="view back-view">
+                                <img src="assets/images/game-icons/img-5.png" alt="card-img">
+                            </div>
+                        </li>
+                        <li class="card-game">
+                            <div class="view front-view">
+                                <span class="material-symbols-outlined">question_mark</span>
+                            </div>
+                            <div class="view back-view">
+                                <img src="assets/images/game-icons/img-6.png" alt="card-img">
+                            </div>
+                        </li>
+                        <li class="card-game">
+                            <div class="view front-view">
+                                <span class="material-symbols-outlined">question_mark</span>
+                            </div>
+                            <div class="view back-view">
+                                <img src="assets/images/game-icons/img-4.png" alt="card-img">
+                            </div>
+                        </li>
+                        <li class="card-game">
+                            <div class="view front-view">
+                                <span class="material-symbols-outlined">question_mark</span>
+                            </div>
+                            <div class="view back-view">
+                                <img src="assets/images/game-icons/img-3.png" alt="card-img">
+                            </div>
+                        </li>
+                        <li class="card-game">
+                            <div class="view front-view">
+                                <span class="material-symbols-outlined">question_mark</span>
+                            </div>
+                            <div class="view back-view">
+                                <img src="assets/images/game-icons/img-2.png" alt="card-img">
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            </section>
+            <!-- retunr to top button -->
+
+            <button id="toTopBtn" onclick="toTop()">Back to top</button>
 
     </main>
 
@@ -336,7 +361,7 @@
         </ul>
     </footer>
     <!-- javascript script -->
-    <script src="assets/js/bubbles.js"></script>
+    <script type="module" src="assets/js/bubbles.js"></script>
     <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
