add form styling

--- a/contact.html
+++ b/contact.html
@@ -48,11 +48,39 @@
     <!-- main content -->
     <main>
         <div id="hero-contact">
-        <h2 id="hero-contact-covertext">We <em>love</em> hearing from our young learners and their families!</h2>
-    </div>
+            <h2 id="hero-contact-covertext">We <em>love</em> hearing from our young learners and their families!</h2>
+        </div>
 
-   
-      </div>
+        <!-- contact form with ficticious details-->
+         <div id="contact-form">
+        <h3>Send us a message!</h3>
+        <form action="404.html" method="post">
+            Name: <br>
+            <input type="text" name="name"> <br>
+
+            Email: <br>
+            <input type="email" name="email"> <br>
+
+            Message: <br>
+            <textarea placeholder="Write us a note"></textarea><br>
+
+            Type of feedback: <br>
+            <input type="radio" name="feedback" value="Compliment">Compliment<br>
+            <input type="radio" name="feedback" value="Criticism">Criticism<br>
+            <input type="radio" name="feedback" value="Ideas">Ideas<br>
+
+            Would you like to receive our Newsletter? <br>
+            <select>
+                <option default>--Select your answer--</option>
+                <option value="yes">Yes</option>
+                <option value="no">No</option> <br>
+            </select><br>
+<br>
+            <input type="submit" value="Send"><br>
+
+        </form> <br>
+        <h3>Thank you!</h3>
+    </div>
     </main>
 
     <!-- footer -->
