--- a/404.html
+++ b/404.html
@@ -45,11 +45,13 @@
             </ul>
         </nav>
     </header>
+    <main>
 <div>
     <h1>OH NO!</h1>
-    <h2>Something went wrong</h2>
-
-    <button >Go back</button>
+    <p>Something went wrong, click the link below to retunr to our website.</p>
+    <a href="index.html">Go back</a>
 </div>
+</main>
+
 </body>
 </html>
