add README.md details

--- a/404.html
+++ b/404.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title><meta charset="UTF-8">
+    <title>Document</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- stylesheets -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -46,12 +48,14 @@
         </nav>
     </header>
     <main>
-<div>
-    <h1>OH NO!</h1>
-    <p>Something went wrong, click the link below to retunr to our website.</p>
-    <a href="index.html">Go back</a>
-</div>
-</main>
+        <div class="card" style="text-align: center;">
+            <img src="assets/images/404-img.png" style="max-width: 100%;" alt="monkey face">
+            <h1>OH NO!</h1>
+            <p style="text-align: center;">Something went wrong, click the link below to retunr to our website.</p>
+            <a href="index.html">Go back</a>
+        </div>
+    </main>
 
 </body>
+
 </html>
