--- a/bubbles.html
+++ b/bubbles.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- google fonts -->
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=question_mark" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=question_mark">
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -153,8 +153,6 @@
                     </div>
                 </div>
 
-
-
                 <div class="col align-self-center">
                     <div class="card">
                         <img src="assets/images/eel.png" class="card-img-top" alt="small fox caught in a snare">
@@ -182,6 +180,7 @@
                             </p>
                         </div>
                     </div>
+                </div>
             </section>
 
             <!-- flip game -->
@@ -320,9 +319,8 @@
                     </ul>
                 </div>
             </div>
-            </section>
+    
             <!-- retunr to top button -->
-
             <button id="toTopBtn" onclick="toTop()">Back to top</button>
 
     </main>
