--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
 
             Would you like to receive our Newsletter? <br>
             <select>
-                <option default>--Select your answer--</option>
+                <option>--Select your answer--</option>
                 <option value="yes">Yes</option>
                 <option value="no">No</option>
             </select><br>
