correct some error

--- a/404.html
+++ b/404.html
@@ -49,7 +49,7 @@
         <div class="card" style="text-align: center;">
             <img src="assets/images/404-img.png" style="max-width: 100%;" alt="monkey face">
             <h1>OH NO!</h1>
-            <p style="text-align: center;">Something went wrong, click the link below to retunr to our website.</p>
+            <p style="text-align: center;">Something went wrong, click the link below to return to our website.</p>
             <a href="index.html">Go back</a>
         </div>
     </main>
