--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <section>
             <h2>About</h2>
             <p>At Bright Minds Academy, we believe that every child is a star waiting to shine! Our interactive
-                website is designed to help young learners improve their reading and math skills in an exciting
+                website is designed to help young learners improve their reading skills in an exciting
                 and
                 playful way. Through engaging games, colorful activities, and stories that spark the
                 imagination,
